@@ -1,6 +1,7 @@
 Version 1.7.6+svn:
  * AI:
    * Filtering of allowed attackers/defenders in 'attacks' aspect.
+   * Fix a serious enough bug in default ai targeting. The bug caused the AI, in certain situations, to make weird shuffle-doing-nothing moves and not seek enemies or their villages
  * Language and i18n:
    * New translations: Shavian
    * Updated translations: Dutch, Estonian, German, Hungarian, Russian,
